--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,6 +32,26 @@ body {
   padding: 0;
 }
 
+.skip-to-content {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.skip-to-content:focus {
+  position: static;
+  width: auto;
+  height: auto;
+  overflow: visible;
+  background-color: #000;
+  color: #fff;
+  padding: 0.5em;
+  z-index: 100;
+}
+
 /* Typography */
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.2;
