added print styles and updated detail page

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -21,6 +21,7 @@
   <title>{{ title | safe }} | Trans History Project</title>
   
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/print.css" media="print">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
@@ -46,6 +47,7 @@
     <p><a href="/accessibility">Accessibility Statement</a></p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <script src="/js/main.js"></script>
 </body>
 </html>
