--- a/src/css/main.css
+++ b/src/css/main.css
@@ -106,6 +106,10 @@ header .container {
   text-decoration: none;
 }
 
+header nav { 
+  padding-left: 1rem;
+}
+
 nav ul {
   display: flex;
   list-style: none;
@@ -131,6 +135,10 @@ nav a:hover {
 main {
   padding: 2rem 0;
   min-height: calc(100vh - 200px);
+}
+
+main h1 {
+  margin-top:1rem;
 }
 
 /* Timeline styles */
@@ -628,6 +636,10 @@ footer a:hover {
 .timeline-item:nth-child(even) .timeline-content::after {
   left: -10px;
   transform: translateX(-50%);
+}
+
+ol {
+  margin-left: 1rem;
 }
 
 /* Responsive */
