--- a/src/pages/figures.njk
+++ b/src/pages/figures.njk
@@ -7,9 +7,9 @@ pagination:
 permalink: "figures/{{ figure.fileSlug }}/index.html"
 layout: figure.njk
 eleventyComputed:
-  title: "{{ figure.data.name }} | Trans History Project"
-  description: "{{ figure.data.summary }}"
-  image: "{{ figure.data.image }}"
+  title: "{{ figure.name }} | Trans History Project"
+  description: "{{ figure.summary }}"
+  image: "{{ figure.image }}"
 ---
 
 {{ figure.templateContent | safe }}
