--- a/src/pages/figures.njk
+++ b/src/pages/figures.njk
@@ -10,6 +10,12 @@ eleventyComputed:
   title: "{{ figure.name }} | Trans History Project"
   description: "{{ figure.summary }}"
   image: "{{ figure.image }}"
+  # Pass all figure data to the layout
+  name: "{{ figure.name }}"
+  pronouns: "{{ figure.pronouns }}"
+  born: "{{ figure.born }}"
+  died: "{{ figure.died }}"
+  notable_for: "{{ figure.notable_for }}"
+  sources: "{{ figure.sources }}"
+  templateContent: "{{ figure.templateContent }}"
 ---
-
-{{ figure.templateContent | safe }}
