--- a/src/pages/figures.njk
+++ b/src/pages/figures.njk
@@ -15,7 +15,7 @@ eleventyComputed:
   pronouns: "{{ figure.pronouns }}"
   born: "{{ figure.born }}"
   died: "{{ figure.died }}"
-  notable_for: "{{ figure.notable_for }}"
-  sources: "{{ figure.sources }}"
+  notable_for: {{ figure.notable_for }}
+  sources: {{ figure.sources }}
   templateContent: "{{ figure.templateContent }}"
 ---
